[package]
name = "myjammer"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MPL-2.0"
description = "Simple music & speech jammer"
repository = "https://github.com/metastable-void/myjammer"
authors = ["metastable-void"]

[dependencies]
alsa = "0.7"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
echo_nlms = { version = "0.1.0", path = "echo_nlms" }
